fixed word wrap on side nav bar

--- a/css/index.css
+++ b/css/index.css
@@ -57,7 +57,10 @@ body {
 
 nav {
   margin-top: 15rem;
-  white-space: nowrap;
+  /*  white-space: nowrap;*/
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  hyphens: auto;
   /*  margin: 0em 0 0 0;*/
   font-family: "Work Sans";
   font-size: 24px;
@@ -70,7 +73,7 @@ nav {
   nav ul {
     position: sticky;
     top: 10rem;
-    width: 100px;
+    width: 80px;
   }
 }
 
@@ -203,6 +206,7 @@ footer {
   nav ul li a {
     font-weight: 400;
     font-size: 11px;
+    width: 75px;
   }
 
   nav ul li a.current {
